package io.github.mosser.arduinoml.ens.model;

public enum SIGNAL {
	HIGH,
	LOW
}